@startuml
hide empty members

class EasyNmeaImpl

EasyNmeaImplTests : void set_serial_interface(SerialInterface<>* serial_interface)

SerialInterfaceMock : MOCK_METHOD(open)
SerialInterfaceMock : MOCK_METHOD(is_open)
SerialInterfaceMock : MOCK_METHOD(close)
SerialInterfaceMock : MOCK_METHOD(read_line)

class SerialInterface<asio::serial_port>

SerialInterface <|-- SerialInterfaceMock
EasyNmeaImpl o-- "1" SerialInterfaceMock
EasyNmeaImpl <|-- EasyNmeaImplTests
@enduml
